# ITESORover

./: .gitignore  README.md
robot_ws/src/rover_description/: CMakeLists.txt  package.xml
robot_ws/src/rover_description/launch/: realsense.launch
robot_ws/src/rover_description/meshes/: Drive Module_steerable.STL  Main Bodyy.STL  MirrorBogie_pivot.STL  MirrorDrive Module_steerable.STL  MirrorRocker.STL
robot_ws/src/rover_description/urdf/: drive_module_steerable.xacro  iteso_rover.xacro  iteso_rover.xml  iteso_rover_properies.xacro  suspension_left.xacro  suspension_right.xacro  wheel.xacro
simulation_ws/rover_systems/: CMakeLists.txt  package.xml
simulation_ws/src/rover_description/: CMakeLists.txt  package.xml
simulation_ws/src/rover_description/config/: control.yaml
simulation_ws/src/rover_description/launch/: control.launch  rviz.launch
simulation_ws/src/rover_description/meshes/: Bogie_pivot.STL  Drive Module_steerable.STL  MirrorRocker.STL  Rocker.STL  Wheel.STL
simulation_ws/src/rover_description/urdf/: chassis.xacro  drive_module_steerable.xacro  iteso_rover.xacro  iteso_rover.xml  iteso_rover_properies.xacro  suspension_left.xacro  suspension_right.xacro  wheel.xacro
simulation_ws/src/rover_gazebo/: CMakeLists.txt  package.xml
simulation_ws/src/rover_gazebo/launch/: spawn.launch  start.launch  systems.launch  world.launch
simulation_ws/src/rover_gazebo/models/curiosity_path/: model.sdf
simulation_ws/src/rover_gazebo/worlds/: mars_curiosity.world
simulation_ws/src/rover_systems/: CMakeLists.txt  package.xml
simulation_ws/src/rover_systems/scripts/: WheelsControler.py  wheels_controler.py
