<?xml version="1.0"?>
<package format="2">
  <name>rover_description</name>
  <version>0.0.0</version>
  <description>The rover_description package</description>

  <maintainer email="carlos348@outlook.com">Carlos Soto Pérez</maintainer>
  <license>GPLv3</license>
  <url type="website">https://github.com/CarlosSoPe6/ITESORover</url>
  <author email="carlos348@outlook.com">Carlos Soto Pérez</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>ros_control</exec_depend>
  <exec_depend>ros_controllers</exec_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/.." />
    <gazebo_ros plugin_path="${prefix}/.." />
  </export>
</package>
