<?xml version="1.0"?>
<package format="2">
  <name>rover_gazebo</name>
  <version>0.0.0</version>
  <description>The rover_gazebo package</description>
  
  <maintainer email="carlos348@outlook.com">Carlos Soto Pérez</maintainer>
  <license>GPLv3</license>
  <url type="website">https://github.com/CarlosSoPe6/ITESORover</url>
  <author email="carlos348@outlook.com">Carlos Soto Pérez</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo</depend>
  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros_control</depend>
  <depend>robot_state_publisher</depend>
  <depend>ros_control</depend>
  <depend>ros_controllers</depend>
  <depend>tf</depend>
  <depend>urdf</depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/.." />
    <gazebo_ros plugin_path="${prefix}/.." />
  </export>
</package>
