<?xml version="1.0"?>
<package format="2">
  <name>rover_gazebo</name>
  <version>0.0.0</version>
  <description>The rover_gazebo package</description>
  
  <maintainer email="carlos348@outlook.com">Carlos Soto Pérez</maintainer>
  <license>GPLv3</license>
  <url type="website">https://github.com/CarlosSoPe6/ITESORover</url>
  <author email="carlos348@outlook.com">Carlos Soto Pérez</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>gazebo</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  
  <exec_depend>tf</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>ros_control</exec_depend>
  <exec_depend>ros_controllers</exec_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/.." />
    <gazebo_ros plugin_path="${prefix}/.." />
  </export>
</package>
