<?xml version="1.0"?>
<package format="2">
  <name>rover_systems</name>
  <version>0.0.0</version>
  <description>The rover_systems package</description>

  <maintainer email="carlos348@outlook.com">Carlos Soto Pérez</maintainer>
  <license>GPLv3</license>
  <url type="website">https://github.com/CarlosSoPe6/ITESORover</url>
  <author email="carlos348@outlook.com">Carlos Soto Pérez</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>


  <export>
    <gazebo_ros gazebo_model_path="${prefix}/.." />
    <gazebo_ros plugin_path="${prefix}/.." />
  </export>
</package>
